--- a/ErabliereIU/src/rappel/modal-rappel/modal-rappel.component.html
+++ b/ErabliereIU/src/rappel/modal-rappel/modal-rappel.component.html
@@ -10,6 +10,13 @@
                 {{note.text}}
             </div>
             <div class="modal-footer">
+                @if (note.file) {
+                    <img [src]="note.file" class="img-fluid" alt="de la note">
+                }
+                @if (error) {
+                    <div class="alert alert-danger" style="width: 100%;">{{error}}</div>
+                }
+                <button type="button" class="btn btn-information" (click)="reportRappelProchainePeriode()">Cacher</button>
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
             </div>
         </div>
